--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -96,7 +96,7 @@ $transition-time: 0.3s;
   background-color: $background-color;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  padding: 1rem 0;
+  padding: 0.5rem 0;
   position: relative;
   z-index: 1000;
 
@@ -207,7 +207,7 @@ $transition-time: 0.3s;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 1rem 0;
+    padding-top: 0.5rem;
     background-color: $background-color;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 
