--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -56,6 +56,7 @@ $color2: rgb(46, 46, 46);
 @import"_contact";
 @import"about";
 @import"CategoryPage";
+@import"StickyCartButton";
 
 $primary-color: #333;
 $secondary-color: #ff5722;
